--- a/1/package.json
+++ b/1/package.json
@@ -11,6 +11,7 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "mongoose": "^8.13.1",
     "nodemon": "^3.1.9"
