--- a/Task_Manager/backend/package.json
+++ b/Task_Manager/backend/package.json
@@ -12,10 +12,14 @@
   "type": "commonjs",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2"
+    "moment": "^2.30.1",
+    "mongoose": "^8.13.2",
+    "nodemailer": "^6.10.1"
   }
 }
